Fixed arrows on small screen

--- a/src/app.scss
+++ b/src/app.scss
@@ -66,6 +66,7 @@
     }
     @media screen and (max-width: 499px) {
       top: 5%;
+      left: 10px;
     }
   }
   .right-arrow {
@@ -84,6 +85,7 @@
     }
     @media screen and (max-width: 499px) {
       top: 5%;
+      right: 10px;
     }
   }
 }
